# TerminalMultiplexerSpy

./: Cargo.toml  config.toml  config2.toml  debug.txt  example-cfg.txt
src/: config.rs  main.rs  pty_process.rs  utilities.rs
